fix bugs about onCancel and overflow ion-content

--- a/src/global.scss
+++ b/src/global.scss
@@ -179,12 +179,7 @@ ion-content ion-label{
     margin: 17px 0px;
    
 }
-ion-content{
-    overflow: auto;
-    ::-webkit-scrollbar {
-        display: none;
-      }
-}
+
 .searchbar-input.sc-ion-searchbar-md{
     padding-right: 36px;
     border-radius: 24px;
